package model;


public class Book {
    private String title;
    private String author;
    private int publicationYear;
    private String isbn;
    private int availableCopies;

    public Book() {

    }


}
