package model;

public enum LoanStatus {
}
