package model;


public class Member {
    private String name;
    private int age;
    private String membershipNumber;
    private String contactInfo;

    public Member() {

    }


}
