package repository;

public class MemberRepositoryImpl {
}
